<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_channels_to_cmd</name>
  <version>0.0.1</version>
  <description>RC channels to commands</description>
  <author email="antonino.bongiovanni@thalesaleniaspace.com">Antonino Bongiovanni</author>
  <maintainer email="antonino.bongiovanni@thalesaleniaspace.com">Antonino Bongiovanni</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>loc_modes_srvs</depend>
  <depend>crsf_receiver_msg</depend>
  <depend>emrs_locomotion_control</depend>
  <depend>emrs_suspension_control</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>uls_test</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
